Bug 1758527 - Adjust the logic of handing the unresolved current time in PlayNoUpdate() and UpdatePlaybackRate(). r=birtles

Based on the spec [1], the unresolved current time should be checked only if
the auto-rewind flag is ture. Otherwise, the null timeline with the false
auto-rewind flag may get an InvalidStateError DOMException if its effect end
is positive infinity.

Note:
If the animation has no associated timeline, it's current time is
unresolved [2].

Besides, we also tweak the handle for unresolved current time based on the
spec PR: https://github.com/w3c/csswg-drafts/pull/7148, in
UpdatePlaybackRate() and PlayNoUpdate().

Note:
CSS animations and CSS transitions set auto-rewind flag to false [3], and
the current time is unresolved (because the start time and the hold time
are all unresolved), and so the seek time is unresolved as well, especially
when we build a new CSS animation or CSS transition. Therefore we have to
avoid the unresolved seek time to let PlayNoUpdate() early return.

[1] https://drafts.csswg.org/web-animations-1/#playing-an-animation-section
[2] https://drafts.csswg.org/web-animations-1/#animation-current-time
[3] https://drafts.csswg.org/css-animations-2/#animation-play-state

See the spec issue: https://github.com/w3c/csswg-drafts/issues/7145 for
more details.

Differential Revision: https://phabricator.services.mozilla.com/D140682